<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_starred"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/trash" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about" />
    </group>
</menu>